--- a/estudios.html
+++ b/estudios.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Dancing+Script" />
+    <link href='https://fonts.googleapis.com/css?family=Lily Script One' rel='stylesheet'>
     <title>Estudios</title>
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">Pagina principal</a></li>
-        <li><a href="estudios.html">Estudios</a></li>
-        <li><a href="competencias.html">Compenticas</a></li>
+    <header>
+        <nav>
+           <a href="index.html" style="color: black;">Pagina principal</a>
+           <a href="estudios.html" style="color: black;">Estudios</a>
+           <a href="competencias.html" style="color: black;" >Competencias</a>
 
-    </ul>
+        </nav>   
+      
+   </header>
+  
     <h1> Estudios</h1>
     <h2> secundario:</h2>
     <p>Instituto San Roman</p>
