--- a/index.html
+++ b/index.html
@@ -4,24 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Dancing+Script" />
+    <link href='https://fonts.googleapis.com/css?family=Lily Script One' rel='stylesheet'>
     <title>Curriculum vitae</title>
 </head>
 <body>
-    <h1>Curriculum vitae Josefina Mosca</h1>
-    <img src="foto.uadecv.png"  width=300 title="foto Josefina Mosca">
-    <p> Les doy la bienvenida a mi Curriculum vitae</p>
-<ul>
-    <li><a href="index.html">Pagina principal</a></li>
-    <li><a href="estudios.html">Estudios</a></li>
-    <li><a href="competencias.html">Compenticas</a></li>
-</ul>
-<h2> Datos personales:</h2>
- <p> 
-    Nombre:Josefina<br> 
+    <header>
+         <nav>
+            <a href="index.html" style="color: black;">Pagina principal</a>
+            <a href="estudios.html" style="color: black;">Estudios</a>
+            <a href="competencias.html" style="color: black;" >Competencias</a>
+
+         </nav>   
+       
+    </header>
+   
+    <h1>Curriculum vitae Josefina Mosca</h1>  
+    <img src="jose.png" style="padding: 10px;" width="300" title="foto Josefina Mosca">
+
+<h2> Datos personales: </h2>
+ <p2> 
+    Nombre: Josefina<br> 
     Apellido: Mosca<br> 
     Celular: 11 6587-4852 <br> 
-    <a href= "jomosca@uade.edu.ar" >Correo</a>
- </p>
+    <a href= "jomosca@uade.edu.ar"  style="color: black;">Mi Correo</a>
+ </p2>
 
 
 </body>
