--- a/competencias.html
+++ b/competencias.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Dancing+Script" />
+    <link href='https://fonts.googleapis.com/css?family=Lily Script One' rel='stylesheet'>
     <title>Competencias</title>
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">Pagina principal</a></li>
-        <li><a href="estudios.html">Estudios</a></li>
-        <li><a href="competencias.html">Compenticas</a></li>
-    </ul>
+    <header>
+        <nav>
+           <a href="index.html" style="color: black;">Pagina principal</a>
+           <a href="estudios.html" style="color: black;">Estudios</a>
+           <a href="competencias.html" style="color: black;" >Competencias</a>
+
+        </nav>   
+      
+   </header>
+  
     <h1>Competencias:</h1>
     <ul>
-        <li>adaptabilidad</li>
+        <li>Adaptabilidad</li>
         <li>Trabajo en equipo</li>
-        <li>disciplina</li>
+        <li>Disciplina</li>
     
 
     </ul>
