--- a/estudios.html
+++ b/estudios.html
@@ -19,17 +19,16 @@
         </nav>   
       
    </header>
-  
-    <h1> Estudios</h1>
-    <h2> secundario:</h2>
-    <p>Instituto San Roman</p>
-    <H2>Titulo secundario:</H2>
-    <p> Bachillerato secundario orientacion economicas</p>
-    <h2>Universidad:</h2>
-    <p>Uade</p>
-    <h2> Carrera:</h2>
-    <p>Licenciatura en gestion de la tecnologia de informacion</p>
+   <h1> Estudios:</h1>
+   <div class="caja1">
+    <h2> Secundario:San Roman </h2>
+    <H2>Titulo secundario: Bachillerato secundario orientacion economicas </H2>
+    </div>
+    <div class="caja2">
+    <h2>Universidad: Uade</h2>
+    <h2> Carrera: Licenciatura en gestion de la tecnologia de informacion </h2>
 
+    </div>
 
 </body>
 </html>
