--- a/estudios.html
+++ b/estudios.html
@@ -1,34 +1,39 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" href="style.css">
+    <link rel="stylesheet" href="estudios.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Dancing+Script" />
     <link href='https://fonts.googleapis.com/css?family=Lily Script One' rel='stylesheet'>
-    <title>Estudios</title>
+    <title>Curriculum Vitae</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-           <a href="index.html" style="color: black;">Pagina principal</a>
-           <a href="estudios.html" style="color: black;">Estudios</a>
-           <a href="competencias.html" style="color: black;" >Competencias</a>
-
-        </nav>   
-      
-   </header>
-   <h1> Estudios:</h1>
-   <div class="caja1">
-    <h2> Secundario:San Roman </h2>
-    <H2>Titulo secundario: Bachillerato secundario orientacion economicas </H2>
-    </div>
-    <div class="caja2">
-    <h2>Universidad: Uade</h2>
-    <h2> Carrera: Licenciatura en gestion de la tecnologia de informacion </h2>
-
-    </div>
-
-</body>
-</html>
+    <section class="header_enlaces">
+        <header class="header">
+                 <ul class="links">
+                    <li> <a href="index.html">Pagina principal</a></li>
+                    <li> <a href="estudios.html">Estudios</a></li>
+                    <li> <a href="competencias.html">Competencias</a></li>
+                </ul>
+        </header>
+    </section>
+    <section class="estructura">
+        <header class="nombrecompleto">
+            <h1> Curriculnm vitae- Josefina Mosca</h1>
+                <div class="informacion">
+                    <h2 class="subtitulo">Estudios:</h2>
+                    <p class="estudios">
+                        <strong>2023 </strong> - <em> Universidad Argentina de la Empresa (UADE)</em><br>
+                        Licenciatura en gestión de la Información <br><br>
+                         <em>Instituto San Roman </em><br>Bachillerato en Economía y Administración <br> <br>
+                    </p>
+                </div>
+            </div>
+        </header>
+        <footer class="piedepagina">
+            <p> Curriculum Vitae - Josefina Mosca</p>
+        </footer>
+    </section>
