--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="competencias.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Dancing+Script" />
     <link href='https://fonts.googleapis.com/css?family=Lily Script One' rel='stylesheet'>
     <title>Curriculum Vitae</title>
@@ -14,7 +14,7 @@
     <section class="header_enlaces">
         <header class="header">
                  <ul class="links">
-                    <li> <a href="index.html">Pagina principal</a></li>
+                    <li> <a href="paginaprincipal.html">Pagina principal</a></li>
                     <li> <a href="estudios.html">Estudios</a></li>
                     <li> <a href="competencias.html">Competencias</a></li>
                 </ul>
@@ -23,19 +23,21 @@
     <section class="estructura">
         <header class="nombrecompleto">
             <h1> Curriculnm vitae- Josefina Mosca</h1>
+            <div class="foto">
+                <img src="imagen/foto.jpg" alt="Foto">
                 <div class="informacion">
-                    <h2 class="subtitulo">Competencias:</h2>
-                    <p class="competencias">
-                        - <em>Adaptabilidad</em><br>
-                        <br>
-                        - <em> Trabajo en equipo</em><br>
-                        <br>
-                        - <em> Disciplina</em><br>
-                       
+                    <h2 class="subtitulo">Datos Personales</h2>
+                    <p class="datospersonales">
+                        <strong>Nombre y apellido: </strong><em>Josefina Mosca</em><br><br>
+                        <strong>Teléfono: </strong><em>11-8104-0659</em><br><br>
+                        <strong>Correo Electrónico: </strong><em>joseemosca05@gmail.com </em><br><br>
+                        <strong>Dirección: </strong><em> Arcos 2534 - Buenos Aires, Argentina</em><br><br>
+                        <strong></strong>
+                    </p>
                 </div>
             </div>
         </header>
         <footer class="piedepagina">
-            <p> Curriculum Vitae - Josefina Mosca</p>
+            <p>  2023 Curriculum Vitae - Josefina Mosca</p>
         </footer>
     </section>
